<resources>
    <string name="app_name">ParkPay</string>

    <string name="cards">Карты</string>
    <string name="news">Новости</string>
    <string name="camera">Камера</string>
    <string name="profile">Профиль</string>

    <string name="firstParam">Логин</string>
    <string name="secondParam">Пароль</string>
    <string name="remMe">Запомнить меня </string>
    <string name="signIn">Войти</string>

    <string name="name">Имя</string>
    <string name="number">Номер телефона </string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm">Подтвердите пароль</string>
    <string name="dateBirthday">Дата рождения</string>
    <string name="error">Неправильный адрес почты</string>
    <string name="passError">Не менее 6 символов</string>
    <string name="confirmError">Пароли не совпадают</string>

    <string name="reset">Сбросить пароль</string>
    <string name="cancel">Отмена</string>


    <string name="servicedesc">Services desc: </string>
    <string name="aiddescription">Aid description: </string>

    <string name="nameProfile">Имя пользователя</string>
    <string name="editProfile">Редактировать профиль</string>
    <string name="turnNotification">Отключить уведомления</string>
    <string name="invite">Пригласить друзей</string>
    <string name="signOut">Выйти</string>

    <string name="editInfo">Сохранить изменения</string>
    <string name="editProfileInfo">Редактирование</string>

    <string name="pay">Пополнить карту</string>
    <string name="paySum">Сумма</string>
    <string name="add">Добавить карту</string>
    <string name="money">Деньги</string>
    <string name="bonus">Бонусы</string>

    <string name="nC">Номер карты</string>
    <string name="nameEditCard">Название карты</string>

    <string name="titleMoneyCard">Денежный баланс:</string>
    <string name="titleBonusCard">Количество бонусов:</string>


    <string name="editCardInfo">Редактирование карты</string>
    <string name="payCardInfo">Пополнение карты</string>
    <string name="addCardTitle">Добавление карты</string>
    <string name="registration">Регистрация</string>

    <string name="real">Реальные</string>
    <string name="noReal">Виртуальные</string>

    <string name="parks">Парки</string>
    <string name="attractions">Аттракционы</string>
    <string name="titleSearch">Параметры поиска</string>
    <string name="filters">Фильтры</string>
    <string name="minAge">Мин. возраст</string>
    <string name="maxAge">Макс. возраст</string>
    <string name="maxWeight">Макс. вес</string>
    <string name="minGrowth">Мин. рост</string>
    <string name="nameAttraction">Название</string>
    <string name="onMap">На карте</string>
    <string name="more">Подробнее…</string>

    <string name="noCard">У вас пока нет карт</string>
    <string name="noSearch">Ничего не найдено</string>

    <string name="result">ca-app-pub-9760468716956149/2317568936</string>

    <string name="agreeeCheck">Я согласен на обработку персональных данных</string>
    <string name="agreeeCheckText">Положение</string>

    <string name="agreeText"><div class="blog__hightlight" color='#000000'>
	<p>
		 Предоставляя свои персональные данные Пользователь даёт согласие на обработку, хранение и использование своих персональных данных на основании ФЗ № <nobr>152-ФЗ</nobr> «О персональных данных» от 27.07.2006 г. в следующих целях:
	</p>
	<ul>
		<li>Осуществление клиентской поддержки</li>
		<li>Получения Пользователем информации о маркетинговых событиях</li>
		<li>Проведения аудита и прочих внутренних исследований с целью повышения качества предоставляемых услуг.</li>
	</ul>
	<p>
		 Под персональными данными подразумевается любая информация личного характера, позволяющая установить личность Пользователя/Покупателя такая как:
	</p>
	<ul>
		<li>Фамилия, Имя, Отчество</li>
		<li>Дата рождения</li>
		<li>Контактный телефон</li>
		<li>Адрес электронной почты</li>
		<li>Почтовый адрес</li>
	</ul>
	<p>
		 Персональные данные Пользователей хранятся исключительно на электронных носителях и обрабатываются с использованием автоматизированных систем, за исключением случаев, когда неавтоматизированная обработка персональных данных необходима в связи с исполнением требований законодательства.
	</p>
	<p>
		 Компания обязуется не передавать полученные персональные данные третьим лицам, за исключением следующих случаев:
	</p>
	<ul>
		<li>По запросам уполномоченных органов государственной власти РФ только по основаниям и в порядке, установленным законодательством РФ</li>
		<li>Стратегическим партнерам, которые работают с Компанией для предоставления продуктов и услуг, или тем из них, которые помогают Компании реализовывать продукты и услуги потребителям. Мы предоставляем третьим лицам минимальный объем персональных данных, необходимый только для оказания требуемой услуги или проведения необходимой транзакции.</li>
	</ul>
	<p>
		 Компания оставляет за собой право вносить изменения в одностороннем порядке в настоящие правила, при условии, что изменения не противоречат действующему законодательству РФ. Изменения условий настоящих правил вступают в силу после их публикации на Сайте.
	</p>
</div></string>

</resources>
