<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="80dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

    <TextView
        android:id="@+id/nameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageProfile"
        android:text="@string/nameProfile"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameProfile"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/imageProfile"
        android:text="@string/editProfile" />

    <Switch
        android:id="@+id/turnNotification"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageProfile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="19dp"
        android:text="@string/turnNotification" />
</RelativeLayout>