<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Toolbar">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/titleEditProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registration"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.Toolbar>


            <TextView
                android:id="@+id/login_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/name"
                android:text="@string/firstParam"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/login"
                style="@style/edit_profile_input"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/login_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/name_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/name"
                android:text="@string/name"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/name"
                style="@style/edit_profile_input"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/mail_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/mail"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/mail"
                style="@style/edit_profile_input"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/mail_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/mailLayout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:layout_marginEnd="10dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--app:layout_constraintEnd_toEndOf="@+id/login"-->
                <!--app:layout_constraintHorizontal_bias="0.0"-->
                <!--app:layout_constraintStart_toStartOf="@+id/login"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/name">-->

            <!--<EditText-->
                <!--android:id="@+id/mail"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/email"-->
                <!--android:inputType="textEmailAddress"-->
                <!--app:layout_constraintEnd_toEndOf="@+id/login"-->
                <!--app:layout_constraintHorizontal_bias="0.0"-->
                <!--app:layout_constraintStart_toStartOf="@+id/login"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/name" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <TextView
                android:id="@+id/passw_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/passw"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@id/mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/passw"
                style="@style/edit_profile_input"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/passw_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/confirmPassword_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/confirmPassword"
                android:text="@string/confirm"
                app:layout_constraintTop_toBottomOf="@id/passw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/confirmPassword"
                style="@style/edit_profile_input"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/confirmPassword_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/number_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/number"
                android:text="@string/number"
                app:layout_constraintTop_toBottomOf="@id/confirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/number"
                style="@style/edit_profile_input"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/number_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/dateBirthday_label"
                style="@style/edit_profile_label"
                android:labelFor="@id/dateBirthday"
                android:text="@string/dateBirthday"
                app:layout_constraintTop_toBottomOf="@id/number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/dateBirthday"
                style="@style/edit_profile_input"
                android:editable="false"
                android:drawableEnd="@drawable/ic_date"
                android:drawablePadding="12dp"
                app:layout_constraintTop_toBottomOf="@id/dateBirthday_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/signUp"
                app:layout_constraintEnd_toEndOf="@+id/login"
                app:layout_constraintStart_toStartOf="@+id/login"
                app:layout_constraintTop_toBottomOf="@+id/dateBirthday" />



        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>